feat: add security headers and hide nginx version

--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -5,6 +5,8 @@
 
 charset utf-8;
 
+server_tokens off;
+
 tcp_nopush on;
 tcp_nodelay off;
 client_header_timeout 10s;
@@ -34,6 +36,12 @@ server {
   root /app;
 
   expires $expires;
+
+  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+  add_header X-XSS-Protection "1; mode=block";
+  add_header X-Content-Type-Options "nosniff";
+  add_header X-Frame-Options "SAMEORIGIN";
+  add_header Permissions-Policy "accelerometer=(), ambient-light-sensor=(), autoplay=(), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), fullscreen=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share=(), xr-spatial-tracking=(), clipboard-read=(), clipboard-write=(), gamepad=(), speaker-selection=(), conversion-measurement=(), focus-without-user-activation=(), hid=(), idle-detection=(), serial=(), sync-script=(), trust-token-redemption=(), vertical-scroll=(), notifications=(), push=(), speaker=(), vibrate=(), interest-cohort=()";
 
   # To make sure any assets can get through :)
   location / {
